crates/rome_formatter/tests/specs/prettier/typescript/cast/hug-args.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: hug-args.ts

---
# Input
```js
postMessage(
  <IActionMessage>{
    context: item.context,
    topic: item.topic
  }
);

window.postMessage(
  {
    context: item.context,
    topic: item.topic
  } as IActionMessage
);

postMessages(
  <IActionMessage[]>[
    {
      context: item.context,
      topic: item.topic
    }
  ]
);

```

# Output
```js
postMessage(
  <IActionMessage>{
    context: item.context,
    topic: item.topic
  }
);

window.postMessage(
  { context: item.context, topic: item.topic } as IActionMessage,
);

postMessages(<IActionMessage[]>[{ context: item.context, topic: item.topic }]);

```

# Errors
```
error[SyntaxError]: expected `,` but instead found `{`
  ┌─ hug-args.ts:2:19
  │
2 │   <IActionMessage>{
  │                   ^ unexpected


```


